--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
                             <a class="nav-link" href="#">Soccer</a>
                         </li>
                         <li class="nav-item active dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-                              More
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More
                             </a>
                             <ul class="dropdown-menu bg-dark " aria-labelledby="navbarScrollingDropdown">
                               <li><a class="dropdown-item text-light" href="#">Speed-Knitting</a></li>
@@ -70,6 +69,7 @@
                     <button class="my-2 my-sm-0 btn-dark d-none d-lg-block" type="submit">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" class="bi ml-5 m-2 bi-search" viewBox="0 0 16 16">
                             <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z">
+                            </path>
                         </svg>
                     </button>
                 </nav>
@@ -103,9 +103,9 @@
                         </div>
                         <div class="bg-light d-block d-md-none rounded-lg mt-2 p-4 text-center">
                             <h5 class="font-weight-bold">Still Here?</h5>
-                            <h6 class="font-weight-bold mt-3">Check out new trailers from today's hottest games</h3>
+                            <h6 class="font-weight-bold mt-3">Check out new trailers from today's hottest games</h6>
                                 <div class="embed-responsive embed-responsive-16by9">
-                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/UnA7tepsc7s?controls=0" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope;" allowfullscreen></iframe>
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/UnA7tepsc7s?controls=0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope;" allowfullscreen></iframe>
                                 </div>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                             <h2 class="text-danger p-2"><strong>Live</strong></h2>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width:95%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">5:00 Minutes Remaining</div>
-                              </div>
+                                </div>
                         </div>
                         <div class="text-center">
                             <h4 class="font-weight-bold"><span class="text-success">Eagles</span> Leading <span class="text-danger">Rams</span></h4>
